# mvs-cpp-sdk

./: CMakeLists.txt  README.md  sample.cpp
include/: Auth.h  Video.h
src/: Auth.cpp  CMakeLists.txt  Video.cpp
